--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "0.11.x"
+  },
+  "scripts": {
+    "start": "npm start"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
