--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node": "0.11.x"
-  },
-  "scripts": {
-    "start": "npm start"
+    "node": "0.10.x",
+    "npm": "2.1.x"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
