--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "serve-favicon": "~2.2.1",
     "mongodb": "*",
     "monk": "*",
-    "nodemon": "~1.3.7"
+    "nodemon": "~1.3.7",
+    "request": "~2.57.0"
   }
 }
